--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,22 @@
         <tr>
             <td>/users</td>
             <td>GET</td>
-            <td>GET USERS</td>
+            <td>Get Users</td>
         </tr>     
         <tr>
             <td>/users/:id</td>
             <td>GET</td>
-            <td>GET USER BY ID</td>
+            <td>Get User By Id</td>
         </tr>
         <tr>
             <td>/users/register</td>
             <td>POST</td>
-            <td>Add/Register a user</td>
+            <td>Add/Register A User</td>
+        </tr>
+        <tr>
+            <td>/users/signIn</td>
+            <td>POST</td>
+            <td>User Login</td>
         </tr>
         <tr>
             <td>/users/update/:id</td>
@@ -37,7 +42,7 @@
         <tr>
             <td>/users/delete/:id</td>
             <td>DELETE</td>
-            <td>REMOVE USER</td>
+            <td>Remove User</td>
         </tr>
        
     </table>
@@ -52,12 +57,12 @@
         <tr>
             <td>/products</td>
             <td>GET</td>
-            <td>GET Products</td>
+            <td>Get Products</td>
         </tr>     
         <tr>
             <td>/products/:id</td>
             <td>GET</td>
-            <td>GET Product BY ID</td>
+            <td>Get Product By Id</td>
         </tr>
         <tr>
             <td>/products/addProduct</td>
@@ -73,7 +78,7 @@
         <tr>
             <td>/products/delete/:id</td>
             <td>DELETE</td>
-            <td>REMOVE Product</td>
+            <td>Remove Product</td>
         </tr>
        
     </table>
