--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         </tr>
         <tr>
             <td>/users/update/:id</td>
-            <td>/PATCH</td>
+            <td>PATCH</td>
             <td>Edit Users</td>
         </tr>
 
@@ -71,7 +71,7 @@
         </tr>
         <tr>
             <td>/products/update/:id</td>
-            <td>/PATCH</td>
+            <td>PATCH</td>
             <td>Edit Products</td>
         </tr>
 
